# ferrix

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/ferrix-assembler/: Cargo.toml
crates/ferrix-assembler/src/: builder.rs  label.rs  lib.rs
crates/ferrix-assembler/tests/: builder.rs
crates/ferrix-benchmarks/: Cargo.toml
crates/ferrix-benchmarks/baselines/: ci.csv
crates/ferrix-benchmarks/src/: main.rs
crates/ferrix-cli/: Cargo.toml
crates/ferrix-cli/src/: main.rs
crates/ferrix-cli/tests/: main.rs
crates/ferrix-compiler/: Cargo.toml
crates/ferrix-compiler/src/: analysis.rs  ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  parser.rs  sema.rs
crates/ferrix-compiler/tests/: codegen.rs  error.rs  source_pipeline.rs
crates/ferrix-core/: Cargo.toml
crates/ferrix-core/src/: lib.rs  object.rs  value.rs
crates/ferrix-core/src/bytecode/: chunk.rs  disassembler.rs  format.rs  instruction.rs  mod.rs  optimizer.rs  program.rs  serialization.rs  verifier.rs
crates/ferrix-core/src/diagnostics/: error.rs  mod.rs  source.rs  span.rs
crates/ferrix-core/tests/: bytecode_chunk.rs  bytecode_disassembler.rs  bytecode_optimizer.rs  bytecode_serialization.rs  bytecode_verifier.rs  diagnostics_error.rs  diagnostics_source.rs  golden_outputs.rs  object.rs  value.rs  verification_safety.rs
crates/ferrix-runtime/: Cargo.toml
crates/ferrix-runtime/src/: config.rs  daemon.rs  event.rs  extension.rs  lib.rs  middleware.rs  mode.rs  output.rs  policy.rs  process.rs  profile.rs  protocol.rs  request.rs  result.rs  service.rs
crates/ferrix-runtime/tests/: service.rs
crates/ferrix-stdlib/: Cargo.toml
crates/ferrix-stdlib/src/: lib.rs
crates/ferrix-stdlib/tests/: lib.rs
crates/ferrix-vm/: Cargo.toml
crates/ferrix-vm/src/: debug.rs  error.rs  heap.rs  lib.rs  limits.rs  native.rs  runtime.rs  trace.rs
crates/ferrix-vm/tests/: error.rs  heap.rs  runtime.rs
docs/: compatibility.md  runtime-architecture.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compile_source.rs  decode_bytecode.rs
