[workspace]
members = [
    "crates/ferrix-assembler",
    "crates/ferrix-cli",
    "crates/ferrix-compiler",
    "crates/ferrix-core",
    "crates/ferrix-benchmarks",
    "crates/ferrix-runtime",
    "crates/ferrix-stdlib",
    "crates/ferrix-vm",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
ferrix-core = { path = "crates/ferrix-core", version = "0.1.0" }
ferrix-vm = { path = "crates/ferrix-vm", version = "0.1.0" }
ferrix-assembler = { path = "crates/ferrix-assembler", version = "0.1.0" }
ferrix-compiler = { path = "crates/ferrix-compiler", version = "0.1.0" }
ferrix-runtime = { path = "crates/ferrix-runtime", version = "0.1.0" }
ferrix-stdlib = { path = "crates/ferrix-stdlib", version = "0.1.0" }
